--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <head>
         <meta charset="utf-8">
 
-        <title>TALK NAME</title>
+        <title>CPAN Testers Has An API</title>
 
-        <meta name="description" content="TALK DESCRIPTION">
+        <meta name="description" content="CPAN Testers has an API, and
+        here's a demonstration of what it can do">
         <meta name="author" content="Doug Bell">
 
         <meta name="apple-mobile-web-app-capable" content="yes" />
